<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btnTemperatureDHT11"
        android:checkable="true"
        android:title="@string/tTempDHT" />
    <item
        android:id="@+id/btnTempVernier"
        android:checkable="true"
        android:title="@string/tTempVer" />
    <item
        android:id="@+id/btnHumidity"
        android:checkable="true"
        android:title="@string/tHumidity" />
    <item
        android:id="@+id/btnLatitude"
        android:checkable="true"
        android:title="@string/tLatitude" />
    <item
        android:id="@+id/btnLongitude"
        android:checkable="true"
        android:title="@string/tLongitude" />

    <item
        android:id="@+id/btnLux"
        android:checkable="true"
        android:title="@string/tLux" />
    <item
        android:id="@+id/btnShow"
        android:title="@string/tShow" />

</menu>